All templates is done

--- a/main/templates/main/components/discount.html
+++ b/main/templates/main/components/discount.html
@@ -8,7 +8,7 @@
 			<p>по промокоду <span>"онлайн"</span></p>
 		</div>
 		<div class="discount-btn">
-			<a href="#">
+			<a href="{% url 'main:discounts_view' %}">
 				<button>получить скидку</button>
 			</a>
 		</div>
