--- a/main/templates/main/headers/header_dishwashers.html
+++ b/main/templates/main/headers/header_dishwashers.html
@@ -1,5 +1,5 @@
 {% load static %}
-    
+   
 <!-- NAV -->
 
 {% include 'main/components/top_nav.html' %}
@@ -9,7 +9,7 @@
 
 <!-- HEADER -->
 
-<header class="header-wash">
+<header class="header-posud">
     <div class="container">
         
         <div class="title">
@@ -26,7 +26,7 @@
             </div>
             
             <div class="title-square">
-                <h1>ремонт стиральных машин</h1>
+                <h1>ремонт посудомоечных машин</h1>
                 <span>							
                     <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">на дому</span>
                     <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">быстро и недорого</span>
@@ -37,7 +37,7 @@
             <div class="target">
                 <a>
                     <button class="target-btn" onclick="zayavka_on();">
-                        оформить заявку
+                        вызвать мастера
                     </button>
                 </a>
             </div>
