--- a/main/templates/main/headers/header_gas_stoves.html
+++ b/main/templates/main/headers/header_gas_stoves.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+
     
 <!-- NAV -->
 
@@ -9,7 +11,7 @@
 
 <!-- HEADER -->
 
-<header class="header-wash">
+<header class="header-gaz">
     <div class="container">
         
         <div class="title">
@@ -26,18 +28,19 @@
             </div>
             
             <div class="title-square">
-                <h1>ремонт стиральных машин</h1>
+                <h1>ремонт газовых плит</h1>
+                <span class="subtitle">и духовых шкафов</span>
                 <span>							
                     <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">на дому</span>
                     <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">быстро и недорого</span>
-                    <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">все модели</span>							
+                    <span class="item"><img src="{% static 'icons/symbols/galka-red.png' %}" alt="galka">все модели</span>							
                 </span>
                 
             </div>
             <div class="target">
                 <a>
                     <button class="target-btn" onclick="zayavka_on();">
-                        оформить заявку
+                        вызвать мастера
                     </button>
                 </a>
             </div>
