--- a/main/templates/main/headers/header_hoovers.html
+++ b/main/templates/main/headers/header_hoovers.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+
     
 <!-- NAV -->
 
@@ -9,7 +11,7 @@
 
 <!-- HEADER -->
 
-<header class="header-wash">
+<header class="header-pyl">
     <div class="container">
         
         <div class="title">
@@ -26,7 +28,7 @@
             </div>
             
             <div class="title-square">
-                <h1>ремонт стиральных машин</h1>
+                <h1>ремонт пылесосов</h1>
                 <span>							
                     <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">на дому</span>
                     <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">быстро и недорого</span>
@@ -37,7 +39,7 @@
             <div class="target">
                 <a>
                     <button class="target-btn" onclick="zayavka_on();">
-                        оформить заявку
+                        вызвать мастера
                     </button>
                 </a>
             </div>
