Installing reviews in templates

--- a/main/templates/main/cleaning_of_air.html
+++ b/main/templates/main/cleaning_of_air.html
@@ -1,4 +1,5 @@
 {% extends 'main/layouts/base.html' %}
+{% load main_tags %}
 {% load static %}
 
 <div>
@@ -71,7 +72,7 @@
 
         <!-- REVIEWS -->
 
-        {% include 'main/components/reviews.html' %}
+        {% show_all_reviews %}
 
         <!-- REVIEWS end -->
 
