--- a/main/templates/main/refrigerators.html
+++ b/main/templates/main/refrigerators.html
@@ -1,4 +1,5 @@
 {% extends 'main/layouts/base.html' %}
+{% load main_tags %}
 {% load static %}
 
 <div class="wrapper-holod">
@@ -92,7 +93,7 @@
 
     <!-- REVIEWS -->
 
-    {% include 'main/components/reviews.html' %}
+    {% show_all_reviews %}
 
     <!-- REVIEWS end -->
 
