--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -22,6 +22,14 @@
                 <div class="about-top-slider">
                     <div class="top-slider">
                         <!-- здесь слайдер -->
+                            <img src="{% static 'img/about/o-kompanii_1.jpg' %}" alt="slide_1">
+                            <img src="{% static 'img/about/o-kompanii_2.jpg' %}" alt="slide_2">
+                            <img src="{% static 'img/about/o-kompanii_3.jpg' %}" alt="slide_3">
+                            <img src="{% static 'img/about/o-kompanii_4.jpg' %}" alt="slide_4">
+                            <img src="{% static 'img/about/o-kompanii_5.jpg' %}" alt="slide_5">
+                            <img src="{% static 'img/about/o-kompanii_6.jpg' %}" alt="slide_6">
+                            <img src="{% static 'img/about/o-kompanii_7.jpg' %}" alt="slide_7">
+                            <img src="{% static 'img/about/o-kompanii_8.jpg' %}" alt="slide_8">
                     </div>
                     <div class="about-slider__info">
                         <div class="info">
@@ -62,6 +70,33 @@
             </div>
             <div class="container">
                 <!-- здесь фотогалерея сертификатов -->
+                <div id='gallery'>
+                    <a href="{% static 'img/about/sertificat_1.jpg' %}">
+                        <img src="{% static 'img/about/sertificat_1.jpg' %}"
+                            title="sertificat_1">
+                    </a>
+                    <a href="{% static 'img/about/sertificat_2.jpg' %}">
+                        <img src="{% static 'img/about/sertificat_2.jpg' %}"
+                            alt="sertificat_2">
+                    </a>
+                    <a href="{% static 'img/about/sertificat_3.jpg' %}">
+                        <img src="{% static 'img/about/sertificat_3.jpg' %}"
+                            title="sertificat_3">
+                    </a>
+                    <a href="{% static 'img/about/sertificat_4.jpg' %}">
+                        <img src="{% static 'img/about/sertificat_4.jpg' %}"
+                            alt="sertificat_4">
+                    </a>
+                    <a href="{% static 'img/about/sertificat_5.jpg' %}">
+                        <img src="{% static 'img/about/sertificat_5.jpg' %}"
+                            title="sertificat_5">
+                    </a>
+                    <a href="{% static 'img/about/sertificat_6.jpg' %}">
+                        <img src="{% static 'img/about/sertificat_6.jpg' %}"
+                            alt="sertificat_6">
+                    </a>
+                    
+                </div>
             </div>
         </section>
 
