--- a/main/templates/main/contacts.html
+++ b/main/templates/main/contacts.html
@@ -50,6 +50,7 @@
                         <h3>Схема проезда</h3>
                         
                             <!--  здесь карта -->
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d956.7258325430995!2d39.73489318295053!3d47.29422710270902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e3b7c3264e1899%3A0x71d39565a5afdd80!2z0YPQuy4g0JvQtdC70Y7RiNC10L3QutC-LCAxLCDQoNC-0YHRgtC-0LIt0L3QsC3QlNC-0L3Rgywg0KDQvtGB0YLQvtCy0YHQutCw0Y8g0L7QsdC7LiwgMzQ0MDQ1!5e0!3m2!1sru!2sru!4v1598442791902!5m2!1sru!2sru" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                         
                     </div>
                 </div>
