--- a/main/templates/main/layouts/base.html
+++ b/main/templates/main/layouts/base.html
@@ -44,11 +44,17 @@
     <!-- JS pre -->
 
     <script src="{% static 'libs/jquery.js' %}"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
     <script src="{% static 'libs/wow.min.js' %}"></script>
     <script src="{% static 'js/wow_init.js' %}"></script>
 
+    <!-- photobox -->
+    <link rel="stylesheet" href="{% static 'libs/photobox/photobox.css' %}">
+    <script src="{% static 'libs/photobox/jquery.photobox.js' %}"></script>
+
 </head>
 <body>
+
     <div class="content">
         {% block header %}{% endblock %}
         {% block content %}{% endblock %}
@@ -60,5 +66,27 @@
 
     <script src="{% static 'libs/slick.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
+
+    <script>
+        // applying photobox on a `gallery` element which has lots of thumbnails links.
+        // Passing options object as well:
+        //-----------------------------------------------
+        $('#gallery').photobox('a',{ time:0 });
+    
+        // using a callback and a fancier selector
+        //----------------------------------------------
+        // $('#gallery').photobox('li > a.family',{ time:0 }, callback);
+        // function callback(){
+        //    console.log('image has been loaded');
+        // }
+    
+        // destroy the plugin on a certain gallery:
+        //-----------------------------------------------
+        // $('#gallery').photobox('destroy');
+    
+        // re-initialize the photbox DOM (does what Document ready does)
+        //-----------------------------------------------
+        // $('#gallery').photobox('prepareDOM');
+    </script>
 
 </body>
