--- a/main/templates/main/headers/header_refrigerators.html
+++ b/main/templates/main/headers/header_refrigerators.html
@@ -45,8 +45,8 @@
 				
 			</div>
 			<div class="target">
-				<a>
-					<button class="target-btn" onclick="zayavka_on();">
+				<a href="{% url 'main:zayavka_form' %}">
+					<button class="target-btn">
 						оформить заявку
 					</button>
 				</a>
