--- a/main/templates/main/headers/header_cleaning_of_air.html
+++ b/main/templates/main/headers/header_cleaning_of_air.html
@@ -27,9 +27,11 @@
             </div>
             <div class="target_and_social">
                 <div class="square__target-button">
-                    <button onclick="zayavka_on();">
-                        заказать чистку
-                    </button>
+                    <a href="{% url 'main:zayavka_form' %}">
+                        <button>
+                            заказать чистку
+                        </button>
+                    </a>
                 </div>
                 <div class="square__social">
                     <a href="https://vk.com/public174262653" target="_blank">
