--- a/main/templates/main/headers/header_hoovers.html
+++ b/main/templates/main/headers/header_hoovers.html
@@ -37,8 +37,8 @@
                 
             </div>
             <div class="target">
-                <a>
-                    <button class="target-btn" onclick="zayavka_on();">
+                <a href="{% url 'main:zayavka_form' %}">
+                    <button class="target-btn">
                         вызвать мастера
                     </button>
                 </a>
