--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -72,27 +72,27 @@
                 <!-- здесь фотогалерея сертификатов -->
                 <div id='gallery'>
                     <a href="{% static 'img/about/sertificat_1.jpg' %}">
-                        <img src="{% static 'img/about/sertificat_1.jpg' %}"
+                        <img class="sertificat_image" src="{% static 'img/about/sertificat_1.jpg' %}"
                             title="sertificat_1">
                     </a>
                     <a href="{% static 'img/about/sertificat_2.jpg' %}">
-                        <img src="{% static 'img/about/sertificat_2.jpg' %}"
+                        <img class="sertificat_image" src="{% static 'img/about/sertificat_2.jpg' %}"
                             alt="sertificat_2">
                     </a>
                     <a href="{% static 'img/about/sertificat_3.jpg' %}">
-                        <img src="{% static 'img/about/sertificat_3.jpg' %}"
+                        <img class="sertificat_image" src="{% static 'img/about/sertificat_3.jpg' %}"
                             title="sertificat_3">
                     </a>
                     <a href="{% static 'img/about/sertificat_4.jpg' %}">
-                        <img src="{% static 'img/about/sertificat_4.jpg' %}"
+                        <img class="sertificat_image" src="{% static 'img/about/sertificat_4.jpg' %}"
                             alt="sertificat_4">
                     </a>
                     <a href="{% static 'img/about/sertificat_5.jpg' %}">
-                        <img src="{% static 'img/about/sertificat_5.jpg' %}"
+                        <img class="sertificat_image" src="{% static 'img/about/sertificat_5.jpg' %}"
                             title="sertificat_5">
                     </a>
                     <a href="{% static 'img/about/sertificat_6.jpg' %}">
-                        <img src="{% static 'img/about/sertificat_6.jpg' %}"
+                        <img class="sertificat_image" src="{% static 'img/about/sertificat_6.jpg' %}"
                             alt="sertificat_6">
                     </a>
                     
