--- a/main/templates/main/headers/header_gas_stoves.html
+++ b/main/templates/main/headers/header_gas_stoves.html
@@ -1,6 +1,8 @@
 {% load static %}
 
 
+<div class="wrapper-gaz">
+
     
 <!-- NAV -->
 
@@ -33,7 +35,7 @@
                 <span>							
                     <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">на дому</span>
                     <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">быстро и недорого</span>
-                    <span class="item"><img src="{% static 'icons/symbols/galka-red.png' %}" alt="galka">все модели</span>							
+                    <span class="item"><img src="{% static 'img/icons/symbols/galka-red.png' %}" alt="galka">все модели</span>							
                 </span>
                 
             </div>
