--- a/main/templates/main/layouts/base.html
+++ b/main/templates/main/layouts/base.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="ремонт бытовой техники, ремонт техники miele, ремонт в Ростове-на-Дону">
     
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
+    <!-- <script type="text/javascript" >
        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -23,7 +23,7 @@
             webvisor:true
        });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/62710786" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript><div><img src="https://mc.yandex.ru/watch/62710786" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
     <!-- /Yandex.Metrika counter -->
 
     <!-- CSS -->
@@ -32,13 +32,19 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/chistka.css' %}">
     <link rel="stylesheet" href="{% static 'css/ustanovka.css' %}">
-    <link rel="stylesheet" href="{% static 'css/adaptive_320.css' %}">
-    <link rel="stylesheet" href="{% static 'css/adaptive_480.css' %}">
-    <link rel="stylesheet" href="{% static 'css/adaptive_768.css' %}">
-    <link rel="stylesheet" href="{% static 'css/adaptive_992.css' %}">
-    <link rel="stylesheet" href="{% static 'css/adaptive_1200.css' %}">
-    <link rel="stylesheet" href="{% static 'css/adaptive_1350.css' %}">
     <link rel="stylesheet" href="{% static 'css/adaptive_1500.css' %}">
+    <link rel="stylesheet" href="{% static 'css/adaptive_1350.css' %}">
+    <link rel="stylesheet" href="{% static 'css/adaptive_1200.css' %}">
+    <link rel="stylesheet" href="{% static 'css/adaptive_992.css' %}">
+    <link rel="stylesheet" href="{% static 'css/adaptive_768.css' %}">
+    <link rel="stylesheet" href="{% static 'css/adaptive_480.css' %}">
+    <link rel="stylesheet" href="{% static 'css/adaptive_320.css' %}">
+    
+   
+    
+    
+    
+    
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
 
     <!-- JS pre -->
