--- a/main/templates/main/zayavka.html
+++ b/main/templates/main/zayavka.html
@@ -19,7 +19,7 @@
     <!-- BACK CALL FORM -->
 
     {% block content %}
-        <div class="back-call-container"}>
+        <div class="back-call-container">
             <section class="back-call-form">
 
                 {% if sent %}
